layout overflow fix

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,7 +20,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  // font-size: 16px;
+  overflow-x: hidden;
 }
 
 a {
